--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <basefont size="10">
     <meta charset="utf-8">
-    <title>Alan Ritter</title>
+    <title>Ahmad Musa</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -71,14 +71,9 @@
 <h1>Alan Ritter</h1>
 <i>Assistant Professor</i> <br>
 <a href="https://cse.osu.edu/">Computer Science and Engineering</a><br>
-<a href="http://www.osu.edu/">The Ohio State University</a><br>
-Office: 595 Dreese Lab <br>
-Email: ritter.1492@osu.edu <br>
-Google Scholar: <a href='https://scholar.google.com/citations?hl=en&user=unXtH3IAAAAJ'>https://scholar.google.com/citations?hl=en&user=unXtH3IAAAAJ</a> <br>
-Semantic Scholar: <a href='https://www.semanticscholar.org/author/Alan-Ritter/4655992'>https://www.semanticscholar.org/author/Alan-Ritter/4655992</a> <br>
-<a href="https://twitter.com/alan_ritter" class="twitter-follow-button" data-show-count="false">Follow @alan_ritter</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script><br>
-</p>
+<a href="http://www.osu.edu/">Khulna University of Engineering & Technology</a><br>
+Khulna, Bangladesh<br>
+Email: ahmadmusacs@gmail.com <br>
 
 <br>
 <p>
@@ -103,10 +98,7 @@ Here is a <a href="http://ec2-54-170-89-29.eu-west-1.compute.amazonaws.com:8000/
 
 </td>
 <td>
-<!-- <p align="right"><img border="0" src="edinburgh.jpg" height="274"> <br/> -->
-<!-- <p align="right"><a href='http://scholar.google.com/citations?hl=en&user=unXtH3IAAAAJ&oi=sra'><img border="0" src="TGIF-7318.jpg" height="317" width="477"></a> <br/> -->
-<!-- <p align="right"><a href='http://scholar.google.com/citations?hl=en&user=unXtH3IAAAAJ&oi=sra'><img border="0" src="TGIF-7318.jpg" width="400"></a> <br/> -->
-<!-- <p align="center"><a href='http://scholar.google.com/citations?hl=en&user=unXtH3IAAAAJ&oi=sra'><img border="0" src="me.png"></a> <br/> -->
+
 <p align="center"><img border="0" src="images/me.png"><br/>
 </td>
 </tr>
@@ -114,119 +106,11 @@ Here is a <a href="http://ec2-54-170-89-29.eu-west-1.compute.amazonaws.com:8000/
 </td><td height=50></td></tr>
 </table>
 <div class='well'>
-<b>Teaching:</b>
-<ul>
-<li><a href='http://aritter.github.io/courses/5522_fall17.html'>CSE 5522: Survey of Artificial Intelligence II: Advanced Techniques</a> (Fall 2017)</li>  
-<li><a href='http://aritter.github.io/courses/5523_spring17.html'>CSE 5523: Machine Learning and Statistical Pattern Recognition</a> (Spring 2017)</li>  
-<li><a href='http://aritter.github.io/courses/5525_spring16.html'>CSE 5525: Speech and Language Processing</a> (Spring 2016)</li>  
-<li><a href='http://aritter.github.io/courses/5539_fall15.html'>CSE 5539: Web Information Extraction</a> (Fall 2015)</li>
-<li><a href='http://aritter.github.io/courses/5522.html'>CSE 5522: Survey of Artificial Intelligence II: Advanced Techniques</a> (Spring 2015)</li>
-<li><a href='http://aritter.github.io/courses/5539.html'>CSE 5539: NLP and IE for the Social Web</a> (Fall 2014)</li>
-</ul>
+<b>Research interests</b>
+
 </div>
 
-<div class='well'>
-<b>Students:</b>
-<ul>
-  <li><a href='http://abaheti95.github.io/'>Ashutosh Baheti</a>
-  <li>Fan Bai</li>
-  <li>Xiaonan Ji (co-advised with <a href='https://medicine.osu.edu/bmi/people/poyin_yen/pages/index.aspx'>Po-Yin Yen</a>)</li>
-  <li><a href='http://alexknvl.com/'>Alexander Konovalov</a></li>
-  <li>Chaitanya Kulkarni (co-advised with <a href='http://web.cse.ohio-state.edu/~raghu/'>Raghu Machiraju</a>)</li>
-  <li><a href='http://sandeshs.github.io/'>Sandesh Swamy</a>  (co-advised with <a href='http://www.ling.ohio-state.edu/~mcdm/index.html'>Marie-Catherine de Marneffe</a>)
-  <li><a href='https://sites.google.com/site/jeniyatabassum/'>Jeniya Tabassum</a></li>
-</ul>
-</div>
 
-<div class='well'>
-<b>Recent Activities:</b>
-<ul>
-  <li>12/2017, Talk at <a href="https://lld-workshop.github.io/">NIPS workshop on Learning with Limited Labeled Data</a></li>
-  <li>Area chair, <a href="http://naacl2018.org/">NAACL 2018</a>, Social Media Analysis and Computational Social Science</li>
-  <li>7/2017 Interview on <a href='https://www.microsoft.com/en-us/research/video/research-focus-conversational-agents/'>Data-Driven Conversational Agents</a></li>
-  <li>7/2017 Talk at the <a href='https://www.microsoft.com/en-us/research/video/conversational-systems-era-deep-learning-big-data/'>Microsoft Research Faculty Summit</a></li>
-  <li>7/2017 Talk at <a href="https://sites.google.com/view/2017nlpworkshop/home">Google Natural Language Understanding Workshop</a></li>
-  <li>2 papers at EMNLP 2017 on <a href='https://arxiv.org/abs/1701.06547'>adversarial learning for neural dialogue generation</a> and <a href=''>forecasting contests from users' predictions on Twitter</a>.  Congrats to <a href='http://web.stanford.edu/~jiweil/'>Jiwei</a> and <a href='http://sandeshs.github.io/'>Sandesh</a>!
-  <li>6/2017 Speaking at the <a href='http://mjt.web.engr.illinois.edu/mmls_17/'>Midwest ML Symposium</a></li>
-  <li>3rd Workshop on NLP in noisy user-generated text (<a href='http://noisy-text.github.io/2017/'>W-NUT</a>) at EMNLP 2017.  Consider submitting an abstract or paper!</li>
-  <li>Paper on <a href='www17.pdf'>Learning to Extract Events from Knowledge Base Revisions</a> accepted for presentation at <a href='http://www.www2017.com.au/'>WWW 2017</a>.  Congrats to <a href='https://github.com/alexknvl'>Alex</a>!</li>  
-  <li>12/2016 Talk at <a href='Tsinghua.pdf'>Tsinghua University</a>.</li>
-  <li><a href='https://www.iarpa.gov/'>IARPA</a>-funded project to extract a realtime cybersecurity knowledge-graph from text as part of the <a href='https://www.iarpa.gov/index.php/research-programs/cause'>CAUSE program</a>. </li>
-  <li><a href='https://sites.google.com/site/osunlpcl/announcement'>NLP Speaker Series</a> at OSU.</li>
-  <li>2 papers at EMNLP on <a href='https://arxiv.org/abs/1608.02904'>distant supervision for time expressions</a> and <a href='https://arxiv.org/abs/1606.01541'>reinforcement learning in data-driven conversation</a>.  Congrats to <a href='https://sites.google.com/site/jeniyatabassum/'>Jeniya</a> and <a href='http://web.stanford.edu/~jiweil/'>Jiwei</a>!
-  <li>Area chair, <a href="http://www.emnlp2016.net/">EMNLP 2016</a>, Information Extraction, Information Retrieval and Question Answering.</li>
-  <li>2nd Workshop on NLP in noisy user-generated text (<a href='http://noisy-text.github.io/2016/'>W-NUT</a>) at COLING 2016. </li>
-  <li>NSF Grant on <a href='http://nsf.gov/awardsearch/showAward?AWD_ID=1464128&HistoricalAwards=false'>Learning to Extract Events from Knowledge Base Revisions</a>.</li>  
-  <li>Visiting researcher, <a href='http://research.microsoft.com/en-us/groups/nlp/'>Microsoft Research NLP Group</a> August 2015.</li>  
-  <li>Talk at <a href='http://www.cs.cmu.edu/afs/.cs.cmu.edu/Web/Posters/SCSLecture-Ritter15.pdf'>CMU</a>.</li>
-  <li>Paper on <a href='http://www.cv-foundation.org/openaccess/content_cvpr_2015/html/Chen_Sense_Discovery_via_2015_CVPR_paper.html'>Word Sense Induction using Text and Images</a> accepted for presentation at <a href='http://www.pamitc.org/cvpr15/'>CVPR 2015</a>.  Congrats to <a href='http://www.cs.cmu.edu/~xinleic/'>Xinlei</a>!</li>
-  <li>Paper on <a href='twitter_security.pdf'>Extracting Computer Security Events from Twitter</a> accepted for presentation at <a href='http://www.www2015.it/'>WWW 2015</a>.</li>
-  <li>1st Workshop on NLP in noisy user-generated text (<a href='http://noisy-text.github.io/'>W-NUT</a>) at ACL 2015.</li>
-  <!-- <li><a href='http://www.transacl.org/'>TACL</a> paper on <a href='https://tacl2013.cs.columbia.edu/ojs/index.php/tacl/article/download/498/64'>Extracting Paraphrases from Twitter</a>.  Congrats to <a href='http://www.cis.upenn.edu/~xwe/'>Wei</a>!</li> -->
-  <li>Area chair, <a href='http://naacl.org/naacl-hlt-2015'>NAACL 2015</a>, Information Extraction and Question Answering.</li>
-  <li>Co-organizer, Semeval shared task on <a href='http://alt.qcri.org/semeval2015/task10/'>Sentiment Analysis in Twitter</a>.</li>
-  <li>2 papers on user-profile and life-event extraction at <a href='http://aritter.github.io/life_event.pdf'>EMNLP 2014</a> and <a href='http://aritter.github.io/acl2014_li.pdf'>ACL 2014</a>.  Congrats to <a href='http://web.stanford.edu/~jiweil/'>Jiwei</a>!</li>
-  <li>Area chair, <a href='http://acl2014.org/'>ACL 2014</a>, NLP for the Web and Social Media.</li>
-</ul>
-</div>
-</big>
-
-<!--
-I am a Postdoctoral Fellow in the <a href="http://www.ml.cmu.edu/index.html">Machine Learning Department</a> at Carnegie Mellon University working with
-<a href="http://www.cs.cmu.edu/~tom/">Tom Mitchell</a>.
-<br>
--->
-
-<!--
-<div class="navbar navbar-fixed-bottom">
-<div class="alert alert-success">
-<center>
-Consider submitting a paper to <a href='http://naacl.org/naacl-hlt-2015/'>NAACL HLT 2015</a>!
-</center>
-</div>
-</div>
--->
-
-<!--
-<div class="navbar navbar-fixed-bottom">
-<div class="alert alert-success">
-<center>
-<b>News:</b> I will be joining the department of <a href="http://www.cse.ohio-state.edu/">Computer Science and Engineering</a> at The Ohio State University as an assistant professor in Fall 2014.
-</center>
-</div>
-</div>
--->
-
-
-
-<!--
-Much of humanity's collective knowledge is encoded in text.
-Broadly I am interested in getting computers to better <a href="http://en.wikipedia.org/wiki/Natural_language_understanding">understand natural language</a>, and new applications this will enable.
-I enjoy working with large quantities of text which is not restricted to a narrow domain, such as that found on the <b>Web</b> or in <b>Social Media</b>.
-
-Specifically my work focuses on <a href="http://en.wikipedia.org/wiki/Information_extraction">Information Extraction</a>, <a href="http://www.siglex.org/">Computational Lexical Semantics</a>, <a href="http://en.wikipedia.org/wiki/Latent_variable">Latent Variable Models</a>, <a href="http://research.microsoft.com/en-us/events/lsm2011/">Language Processing in Social Media</a> and <a href="http://iuiconf.org/">Intelligent Interfaces</a>.
--->
-<p>
-
-    </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster
-    <script src="bootstrap/js/jquery.js"></script>
-    <script src="bootstrap/js/bootstrap-transition.js"></script>
-    <script src="bootstrap/js/bootstrap-alert.js"></script>
-    <script src="bootstrap/js/bootstrap-modal.js"></script>
-    <script src="bootstrap/js/bootstrap-dropdown.js"></script>
-    <script src="bootstrap/js/bootstrap-scrollspy.js"></script>
-    <script src="bootstrap/js/bootstrap-tab.js"></script>
-    <script src="bootstrap/js/bootstrap-tooltip.js"></script>
-    <script src="bootstrap/js/bootstrap-popover.js"></script>
-    <script src="bootstrap/js/bootstrap-button.js"></script>
-    <script src="bootstrap/js/bootstrap-collapse.js"></script>
-    <script src="bootstrap/js/bootstrap-carousel.js"></script>
-    <script src="bootstrap/js/bootstrap-typeahead.js"></script>
-    -->
     <script src="./bootstrap/js/bootstrap-min.js"></script>
 
     <script>
