--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 <tr>
 <td width="70%">
 <p>
-<h1>Alan Ritter</h1>
-<i>Assistant Professor</i> <br>
+<h1>Ahmad Musa</h1>
 <a href="https://cse.osu.edu/">Computer Science and Engineering</a><br>
 <a href="http://www.osu.edu/">Khulna University of Engineering & Technology</a><br>
 Khulna, Bangladesh<br>
