--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 <td width="70%">
 <p>
 <h1>Ahmad Musa</h1>
-<a href="https://cse.osu.edu/">Computer Science and Engineering</a><br>
-<a href="http://www.osu.edu/">Khulna University of Engineering & Technology</a><br>
+<a href="http://www.kuet.ac.bd/departments/index.php/welcome/index/41">Computer Science and Engineering</a><br>
+<a href="http://www.kuet.ac.bd/">Khulna University of Engineering & Technology</a><br>
 Khulna, Bangladesh<br>
 Email: ahmadmusacs@gmail.com <br>
 
