--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.html">Alan Ritter</a>
+          <a class="brand" href="index.html">Ahmad Musa</a>
 
           <ul class="nav">
             <li class="active"><a href="index.html">Home</a></li>
