--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <li class="active"><a href="index.html">Home</a></li>
             <!-- <li><a href="projects.html">Research</a></li> -->
             <li><a href="publications.html">Publications</a></li>
-            <li><a href="software.html">Software</a></li>
+            <li><a href="mentoring.html">Mentoring Experience</a></li>
             <li><a href="advice.html">Advice</a></li>
             <!-- <li><a href="application.html">Job Application Materials</a></li> -->
             <li><a href="application_materials/alan_ritter_CV.pdf">C.V.</a></li>
