--- a/mentoring.html
+++ b/mentoring.html
@@ -61,9 +61,11 @@
     <div class="container">
     <h1>Mentoring Experience</h1>
 <ul>
-  <li>Introduction to C programming</li>
-  <h1> SGIPC </h1>
-  <li><a href='http://github.com/aritter/twitter_nlp'>Twitter NLP Tools</a></li>
+  <li> <h2>Introduction to C programming </h2></li>
+  <br/>
+  <h4>I was an instructor of a programming club named "SGIPC" to teach C programming to junior undergraduate students.</h4>
+  <li> <h2>Dynamic Programming </h2> </li>
+  <h4> I have taken a 10 day workshop on Dynamic Programming algorithms and how to solve real world model problems using them.</h4>
   <li><a href='http://kb1.cse.ohio-state.edu:8123/events/ddos'>Cybersecurity Event Extraction from Social Media Demo</a></li>
   <li><a href='http://github.com/aritter/dnmar'>Missing Data in Distant Supervision</a></li>  
   <li><a href='http://alt.qcri.org/semeval2015/task10/index.php?id=data-and-tools'>SemEval Sentiment Dataset</a></li>
