--- a/mentoring.html
+++ b/mentoring.html
@@ -66,26 +66,32 @@
   <h4>I was an instructor of a programming club named "SGIPC" to teach C programming to junior undergraduate students.</h4>
   <li> <h2>Dynamic Programming </h2> </li>
   <h4> I have taken a 10 day workshop on Dynamic Programming algorithms and how to solve real world model problems using them.</h4>
-  <li><a href='http://kb1.cse.ohio-state.edu:8123/events/ddos'>Cybersecurity Event Extraction from Social Media Demo</a></li>
-  <li><a href='http://github.com/aritter/dnmar'>Missing Data in Distant Supervision</a></li>  
-  <li><a href='http://alt.qcri.org/semeval2015/task10/index.php?id=data-and-tools'>SemEval Sentiment Dataset</a></li>
-  <li><a href='http://kb1.cse.ohio-state.edu:8010/cgi-bin/mt_chat3.py'>Data-Driven Response Generation Demo</a></li>
-  <!-- <li><a href="http://rv-n13.cs.washington.edu:1234/shakespere/shakespere.py"><font color="gray">Shakespeare Translator</font></a></li> -->
-  <!-- <li><a href='http://www.cs.washington.edu/homes/aritter/twitter_chat/'>Twitter Conversation Corpus</a></li> -->
-  <!-- <li><a href='http://rv-n12.cs.washington.edu:1234/lda_sp_demo_v3/lda_sp/relations/'>Topic-Model Based Selectional Preferences</a> see also <a href="https://github.com/aritter/LDA-SP">Inference and Evaluation Code</a></li> -->
-  <!-- <li><a href='freebase_html.html'>Querying and Updating Freebase with Web Tables</a></li> -->
-  <!-- <li><a href='http://turingc.cs.washington.edu:7125/TextRunner/cgi-bin/raw_hyp.pl?http'>Hypernyms Extracted from the Web</a></li> -->
-  <!-- <li><a href='hyp.zip'>Hypernyms Extracted from the Web</a></li> -->
-  <!-- <li><a href="http://milkhog.cs.washington.edu:1234/tgrep/tgrep_extract.py">Extraction patterns over parsed news articles (using the Charniak Parser and tgrep2)</a></li> -->
-<!--  <li><a href="http://turingc.cs.washington.edu:1234/conflict-dev.pl?pred=invented&n=100000">Automatically detecting conflicting statements on the web</a></li> -->
-  <!-- <li><a href="http://turingc.cs.washington.edu:7125/TextRunner/cgi-bin/analogy.pl">Solving analogies using TextRunner</a></li> -->
-</ul>
+  <h1>Teaching</h1>
+<div class="well">
+  <li><a href='http://aritter.github.io/courses/5525_spring16.html'>CSE 5525: Speech and Language Processing</a> (Spring 2016)</li>    
+</div>
+      
+<div class="well">
+  <li> Introduction to C programming  <br/>
+  I was an instructor of a programming club named "SGIPC" to teach C programming to junior undergraduate students.</li>
+</div>
 
-<!--
-<h3>Presentations</h3>
-<a href="navdas(2).ppt">NRL Seminar</a> <br/>
-<a href="poster.pdf">openMosix Load Balancing Poster</a>
--->
+<div class="well">
+  <li><a href='http://aritter.github.io/courses/5522.html'>CSE 5522: Survey of Artificial Intelligence II: Advanced Techniques</a> (Spring 2015)</li>
+</div>
+
+<div class="well">
+  <li><a href='http://aritter.github.io/courses/5539.html'>CSE 5539: NLP and IE for the Social Web</a> (Fall 2014)</li>
+</div>
+
+<div class="well">
+  <li><a href='lvls.pdf'>Tutorial on Latent Variable Models for Lexical Semantics</a></li>
+</div>
+
+
+
+
+
 
     </div> <!-- /container -->
 
