--- a/mentoring.html
+++ b/mentoring.html
@@ -59,12 +59,10 @@
     </div>
 
   
-<div class="well">
-  <li><a href='http://aritter.github.io/courses/5525_spring16.html'>CSE 5525: Speech and Language Processing</a> (Spring 2016)</li>    
-</div>
+
       
 <div class="well">
-  <li> Introduction to C programming  <br/>
+  <li> <bold> Introduction to C programming </bold> <br/>
   I was an instructor of a programming club named "SGIPC" to teach C programming to junior undergraduate students.</li>
 </div>
 
