--- a/mentoring.html
+++ b/mentoring.html
@@ -62,7 +62,7 @@
 
       
 <div class="well">
-  <li> <bold> Introduction to C programming </bold> <br/>
+  <li> <b> Introduction to C programming </b> <br/>
   I was an instructor of a programming club named "SGIPC" to teach C programming to junior undergraduate students.</li>
 </div>
 
