--- a/mentoring.html
+++ b/mentoring.html
@@ -67,19 +67,14 @@
 </div>
 
 <div class="well">
-  <li><a href='http://aritter.github.io/courses/5522.html'>CSE 5522: Survey of Artificial Intelligence II: Advanced Techniques</a> (Spring 2015)</li>
+  <li> <b> Dynamic Programming </b> <br/>
+  I have taken workshops on Dynamic Programming algorithms and how to solve real world model problems using DP. </li>
 </div>
 
-<div class="well">
-  <li><a href='http://aritter.github.io/courses/5539.html'>CSE 5539: NLP and IE for the Social Web</a> (Fall 2014)</li>
-</div>
+     <h4> Some precious moments from my Programming Club </h4>
 
-<div class="well">
-  <li><a href='lvls.pdf'>Tutorial on Latent Variable Models for Lexical Semantics</a></li>
-</div>
-
-
-
+     <img src="https://github.com/ahmadmusacs/Portfolio/blob/master/sgipc.jpg" </img>
+  <img src="https://github.com/ahmadmusacs/Portfolio/blob/master/club2.jpg" </img>
 
 
 
