--- a/mentoring.html
+++ b/mentoring.html
@@ -43,10 +43,10 @@
           <a class="brand" href="index.html">Ahmad Musa</a>
 
           <ul class="nav">
-            <li class="active"><a href="index.html">Home</a></li>
+            <li ><a href="index.html">Home</a></li>
             <!-- <li><a href="projects.html">Research</a></li> -->
             <li><a href="publications.html">Publications</a></li>
-            <li><a href="mentoring.html">Mentoring</a></li>
+            <li class="active"><a href="mentoring.html">Mentoring</a></li>
             <li><a href="advice.html">Advice</a></li>
             <!-- <li><a href="application.html">Job Application Materials</a></li> -->
             <li><a href="application_materials/alan_ritter_CV.pdf">C.V.</a></li>
@@ -73,8 +73,8 @@
 
      <h4> Some precious moments from my Programming Club </h4>
 
-     <img src="https://github.com/ahmadmusacs/Portfolio/blob/master/sgipc.jpg" </img>
-  <img src="https://github.com/ahmadmusacs/Portfolio/blob/master/club2.jpg" </img>
+     <img src="https://github.com/ahmadmusacs/Portfolio/blob/master/sgipc.jpg" alt="Mountain View">
+     <img src="https://github.com/ahmadmusacs/Portfolio/blob/master/club2.jpg" alt="Mountai">
 
 
 
