--- a/mentoring.html
+++ b/mentoring.html
@@ -73,8 +73,8 @@
 
      <h4> Some precious moments from my Programming Club </h4>
 
-     <img src="https://github.com/ahmadmusacs/Portfolio/blob/master/sgipc.jpg" alt="Mountain View">
-     <img src="https://github.com/ahmadmusacs/Portfolio/blob/master/club2.jpg" alt="Mountai">
+     <img src="https://raw.githubusercontent.com/ahmadmusacs/Portfolio/master/sgipc.jpg" alt="Mountain View">
+     <img src="https://raw.githubusercontent.com/ahmadmusacs/Portfolio/master/club%202.jpg" alt="Mountai">
 
 
 
