--- a/mentoring.html
+++ b/mentoring.html
@@ -75,7 +75,7 @@
      </br>
      <img src="https://raw.githubusercontent.com/ahmadmusacs/Portfolio/master/sgipc.jpg" alt="Mountain View" width="700" height="350">
      <img src="https://raw.githubusercontent.com/ahmadmusacs/Portfolio/master/club%202.jpg" alt="Mountai" width="700" height="350">
-
+     <img src="https://raw.githubusercontent.com/ahmadmusacs/Portfolio/master/programming.jpg" alt="programming" width="700 height="350">
 
 
     </div> <!-- /container -->
