--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <li><a href="mentoring.html">Mentoring Experience</a></li>
             <li><a href="advice.html">Advice</a></li>
             <!-- <li><a href="application.html">Job Application Materials</a></li> -->
-            <li><a href="application_materials/alan_ritter_CV.pdf">C.V.</a></li>
+            <li><a href="https://raw.githubusercontent.com/ahmadmusacs/Portfolio/master/CV%2C%20Ahmad%20Musa.pdf">C.V.</a></li>
           </ul>
 
           <div class="nav-collapse">
