--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
           <ul class="nav">
             <li class="active"><a href="index.html">Home</a></li>
-            <!-- <li><a href="projects.html">Research</a></li> -->
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="publications.html">Publications</a></li>
             <li><a href="mentoring.html">Mentoring Experience</a></li>
             <li><a href="advice.html">Advice</a></li>
