--- a/projects.html
+++ b/projects.html
@@ -62,12 +62,12 @@
     <h1> Projects </h1>
       
 <div class="well">
-  <li> <b> <a href="https://github.com/ahmadmusacs/Screen-Recorder-" Screen recorder </a> </b> <br/>
+  <li> <b> <a href="https://github.com/ahmadmusacs/Screen-Recorder-"> Screen recorder </a> </b> <br/>
   An Android app to record screen activity with audio. The app runs in the background to capture game playing, video conversation etc. </li>
 </div>
 
 <div class="well">
-  <li> <b> <a href="https://github.com/ahmadmusacs/Screen-Recorder-" Rental Library </a> </b> <br/>
+  <li> <b> <a href="https://github.com/ahmadmusacs/Screen-Recorder-"> Rental Library </a> </b> <br/>
   A website developed in ASP.NET where registered users can browse available books. Users can also view and update the status of their borrowed books.  </li>
 </div>
 
