--- a/projects.html
+++ b/projects.html
@@ -42,14 +42,14 @@
           </a>
           <a class="brand" href="index.html">Ahmad Musa</a>
 
-          <ul class="nav">
-            <li ><a href="index.html">Home</a></li>
-           <li class="active"><a href="projects.html">Projects</a></li> -->
+         <ul class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li  class="active"><a href="projects.html">Projects</a></li>
             <li><a href="publications.html">Publications</a></li>
-            <li ><a href="mentoring.html">Mentoring</a></li>
-            <li><a href="advice.html">Advice</a></li>
+            <li><a href="mentoring.html">Mentoring Experience</a></li>
+            
             <!-- <li><a href="application.html">Job Application Materials</a></li> -->
-            <li><a href="application_materials/alan_ritter_CV.pdf">C.V.</a></li>
+            <li><a href="https://raw.githubusercontent.com/ahmadmusacs/Portfolio/master/CV%2C%20Ahmad%20Musa.pdf">C.V.</a></li>
           </ul>
 
           <div class="nav-collapse">
