--- a/publications.html
+++ b/publications.html
@@ -42,16 +42,15 @@
           </a>
           <a class="brand" href="index.html">Ahmad Musa</a>
 
-            <ul class="nav">
-              <li><a href="index.html">Home</a></li>
-              <!-- <li><a href="projects.html">Research</a></li> -->
-              <li class="active"><a href="publications.html">Publications</a></li>
-              <li><a href="software.html">Software</a></li>
-              <li><a href="teaching.html">Teaching</a></li>
-              <li><a href="application_materials/alan_ritter_CV.pdf">C.V.</a></li>
-              <!-- <li><a href="application.html">Job Application Materials</a></li> -->
-              <!-- <li><a href="travel.html">Upcoming Travel</a></li> -->
-            </ul>
+             <ul class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li   class="active"><a href="publications.html">Publications</a></li>
+            <li><a href="mentoring.html">Mentoring Experience</a></li>
+            
+            <!-- <li><a href="application.html">Job Application Materials</a></li> -->
+            <li><a href="https://raw.githubusercontent.com/ahmadmusacs/Portfolio/master/CV%2C%20Ahmad%20Musa.pdf">C.V.</a></li>
+          </ul>
 
           <div class="nav-collapse">
           </div><!--/.nav-collapse -->
