--- a/index.html
+++ b/index.html
@@ -76,17 +76,12 @@ Email: ahmadmusacs@gmail.com <br>
 
 <br>
 <p>
-Much of human knowledge is encoded in text.
-Broadly I am interested in getting computers to better understand natural language.
-My research uses machine learning to extract knowledge from large heterogeneous text corpora, for example <b>Twitter</b> and the <b>Web</b>.
-I received my Ph.D. in <a href='https://www.cs.washington.edu/'>Computer Science</a> from the University of Washington and was a postdoctoral fellow in the <a href='http://www.ml.cmu.edu/'>Machine Learning Department</a> at Carnegie Mellon.
+I am a fresh graduate in Computer Science and Engineering from Khulna University of Engineering & Technology. 
+Recently, I have joined Enosis Solutions, a renowned software company in Bangladesh, as a Software Engineer. 
+I am also a prospective graduate student, currently applying to grad schools.
 </p>
 
-<p>
-Here is a <a href="http://ec2-54-170-89-29.eu-west-1.compute.amazonaws.com:8000/"'>demo</a> of one of my research projects, that automatically extracts a calendar of popular events in the near future from Twitter.
-</p>
 
-<a href='note.html'>A note to prospective students</a>
 
 <!--
 <div class='well'>
@@ -106,7 +101,10 @@ Here is a <a href="http://ec2-54-170-89-29.eu-west-1.compute.amazonaws.com:8000/
 </table>
 <div class='well'>
 <b>Research interests</b>
-
+  <h4> My research interests are in Computer Vision and Deep Learning. Obtaining important informations from image and video data source and then
+    using them to solve real world problems is my research goal. 
+  </h4>
+  
 </div>
 
 
