--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ I am also a prospective graduate student, currently applying to grad schools.
 </td>
 <td>
 
-<p align="center"><img border="0" src="images/me.png"><br/>
+<p align="center"><img border="0" src="https://raw.githubusercontent.com/ahmadmusacs/Portfolio/master/15391400_1372033392807171_3990140714592159819_o.jpg"><br/>
 </td>
 </tr>
 <tr><td>
